--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
                 Programming<br>
                 Video Games<br>
                 Puzzles<br>
+                <br>
+                <a class="base" href="William_Thomas_Resume.pdf" target="_blank">
+                    <div class="resume">
+                        <h2>View Resume</h2>
+                        <i class="fas fa-file-alt fa-3x"></i><br>
+                    </div>
+                </a>
+                <br>
             </div>
             <div class="item">
                 <i class="fas fa-book fa-3x"></i>
